--- a/The guardian news/guardian_source.yaml
+++ b/The guardian news/guardian_source.yaml
@@ -1,5 +1,5 @@
 prefixes:
-  guardian-news: http://www.semanticweb.org/antonio_2/ontologies/2020/10/guardianNews/
+  guardian-news: http://www.example.org/guardian/
   
 mappings:
   content:
@@ -8,7 +8,7 @@ mappings:
     subject: guardian-news:content/$(id)
     po:
       - [ a, guardian-news:Content ]
-      - [ guardian-news:webPublicationDate, $(webPublicationDate) ]
+      - [ guardian-news:webPublicationDate, $(webPublicationDate), xsd:dateTime ]
       - [ guardian-news:webTitle, $(webTitle) ]
       - [ guardian-news:webUrl, $(webUrl) ]
       - [ guardian-news:apiUrl, $(apiUrl) ]
@@ -20,14 +20,6 @@ mappings:
             parameters:
               - [str1, $(sectionId)]
               - [str2, $(id)]
-      - p: guardian-news:hasTag
-        o:
-         - mapping: tag
-           condition:
-            function: equal
-            parameters:
-              - [str1, $(id)]
-              - [str2, $(id)]
               
   section:
     sources:
@@ -38,14 +30,7 @@ mappings:
       - [guardian-news:webTitle, $(webTitle)]
       - [ guardian-news:webUrl, $(webUrl) ]
       - [ guardian-news:apiUrl, $(apiUrl) ]
-      - p: guardian-news:hasEdition
-        o:
-         - mapping: edition
-           condition:
-            function: equal
-            parameters:
-              - [str1, $(editions)]
-              - [str2, $(id)]
+      
       
   tag:
     sources:
@@ -62,20 +47,11 @@ mappings:
       - [ guardian-news:authorFirstName, $(firstName) ]
       - [ guardian-news:authorLastName, $(lastName) ]
       - [ guardian-news:authorTwitter, $(twitterHandle) ]
-      - p: guardian-news:hasSponsor
-        o:
-         - mapping: sponsor
-           condition:
-            function: equal
-            parameters:
-              - [str1, $(activeSponsorships)]
-              - [str2, $(sponsorLink)]
       
       
   edition:
     source:
       - ['editions.json~jsonpath', '$.response.results[*]']
-      - ['sections.json~jsonpath', '$.response.results[*].editions.[*]']
     subject: guardian-news:edition/$(id)
     po:
       - [a, guardian-news:Edition]
@@ -94,5 +70,5 @@ mappings:
       - [a, guardian-news:Sponsor]
       - [guardian-news:sponsorName, $(sponsorName)]
       - [guardian-news:sponsorLogo, $(sponsorLogo)]
-      - [guardian-news:sponsorStartDate, $(validFrom)]
-      - [guardian-news:sponsorEndDate, $(validTo)]
+      - [guardian-news:sponsorStartDate, $(validFrom), xsd:dateTime]
+      - [guardian-news:sponsorEndDate, $(validTo), xsd:dateTime]
